# typerecommendation

./: .env  .env-example  Cargo.toml  Dockerfile  README.md  data-s5_Fd8oJX1wrtARS2ef5L.json  names.json
src/: endpoints.rs  log.rs  main.rs  procedures.rs
src/endpoints/: rec.rs
src/endpoints/rec/: post.rs
src/endpoints/rec/post/: mod.rs
src/endpoints/rec/prefix/: get.rs
src/endpoints/rec/prefix/get/: mod.rs
src/entry/: mod.rs
src/env/: error.rs  load.rs  mod.rs
src/node/: ext.rs  mod.rs
src/procedures/: load.rs  mod.rs
src/procedures/get/: error.rs  mod.rs  node.rs  result.rs  tree.rs
src/procedures/load/: error.rs  node.rs  tree.rs
src/procedures/vote/: mod.rs  node.rs  result.rs  tree.rs
src/server/: mod.rs
src/tree/: ext.rs  mod.rs
